edited 8 ball images

--- a/main.html
+++ b/main.html
@@ -44,10 +44,13 @@
          
 </div>        
 
-    <div id="answers" >
+    <div id="answers" class="img-fluid" >
         <img src="magic/magic8ball_start.png" class="img-fluid" alt="">
     </div>
 
+    <div>
+        <button type ="button" onclick="refresh()"> Ask Another Question</button>
+    </div>
      
 
 
