--- a/main.html
+++ b/main.html
@@ -17,8 +17,17 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+        
+        <!--link to style sheet-->
+        <link rel="stylesheet" href="css/main.css">  
+   
+        <!--google fonts-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&family=Press+Start+2P&family=Teko:wght@300&display=swap" rel="stylesheet">
 
-   <link rel="stylesheet" href="css/main.css">     
+
+
 </head>
 <body>
 
@@ -30,7 +39,7 @@
                     <input type="text" id="question" required> 
                 <br>
         </form>         
-        <div id="button_container">
+        <div id="buttonAsk">
                 <button  onclick="ask()"> ASK </button>
             </div>
             
